# fintrack-app

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: android-artifact.yml  tauri-release.yml
scripts/: patch-android-immersive.js  rename-android-outputs.js
src/: App.tsx  constants.ts  i18n.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppFooter.tsx  AppHeader.tsx  AppLayout.tsx  ChartModal.tsx  ChartTypeToggle.tsx  Dialogs.tsx  EyeToggle.tsx  InsightsPanel.tsx  MonthPicker.tsx  SortIndicator.tsx  TabActions.tsx  TabsBar.tsx  Toast.tsx  icons.tsx
src/db/: index.ts  schema.sql
src/features/history/: HistoryView.tsx
src/features/month/: MonthView.tsx
src/features/year/: YearView.tsx
src/hooks/: useChartResize.ts  useCharts.ts  useDatabasePath.ts  useDatabaseSettings.ts  useExportData.ts  useHistoryInsights.ts  useImportFlow.ts  useInfoDialogContent.tsx  useIsMobile.ts  useMonthlyData.ts  useMonthlyForm.ts  useMonthlyInsights.ts  usePeriodSelection.ts  useReadOnlySetting.ts  useSafeAreaInsets.ts  useSeriesDerived.ts  useSeriesVisibility.ts  useToastAutoDismiss.ts  useUpdateStatus.ts  useYearInsights.ts
src/locales/: en.json  es.json
src/types/: insights.ts
src/utils/: csv.ts  date.ts  export.ts  format.ts  series.ts
